<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Draw Lots</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_help">Help</string>
    
    <string name="settings_item1">How many lots will be drawn</string>
    
    <string name="button_add">Add</string>
    <string name="button_send">Next</string>
    <string name="edit_message">Enter a name</string>
    <string name="title_activity_show_result">ShowResult</string>
    
    <string name="dialog_draw_lots">Created by changjinxiong@gmail.com</string>
    <string name="dialog_back">OK</string>
    
    <string name="settings_OK">OK</string>
    <string name="settings_cancel">Cancel</string>
    <string name="dialog_got_it">Got it</string>

</resources>
