<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.changjinxiong.drawlots.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linearLayoutMain1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" 
        >		<EditText
	    android:id="@+id/edit_message"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:hint="@string/edit_message"
	    android:inputType="text"
	    android:maxLength="50" />
         
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add" 
        android:onClick="addName"/>
    </LinearLayout>
    

        <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:numColumns="3" >
        </GridView>
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:text="No name in the list."
            android:textSize="15sp"
            android:visibility="invisible" />

	<Button
	    android:id="@+id/botton1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="20dp"
	    android:onClick="sendMessage"
	    android:text="@string/button_send" />
</LinearLayout>